# stab

./: .gitignore  CMakeLists.txt  Doxyfile  Kingdon.sln  README.md  main.cpp
.github/workflows/: cmake.yml
Kingdon/: AffineState.cpp  AffineState.h  Kingdon.vcxproj  Kingdon.vcxproj.filters  Source.cpp
benchmarking/: All_Clifford_times.xlsx  generate_random_cliffords.py  qiskit_clifford_tests.py  simplex_tests.py  stab_tests.cpp  stim_tests.py
benchmarking/random_shallow_nonuniform_stims/: random_clifford_200_1.stim  random_clifford_200_2.stim  random_clifford_200_3.stim  random_clifford_225_1.stim  random_clifford_225_2.stim  random_clifford_225_3.stim  random_clifford_250_1.stim  random_clifford_250_2.stim  random_clifford_250_3.stim  random_clifford_275_1.stim  random_clifford_275_2.stim  random_clifford_275_3.stim  random_clifford_300_1.stim  random_clifford_300_2.stim  random_clifford_300_3.stim  random_clifford_325_1.stim  random_clifford_325_2.stim  random_clifford_325_3.stim  random_clifford_350_1.stim  random_clifford_350_2.stim  random_clifford_350_3.stim  random_clifford_375_1.stim  random_clifford_375_2.stim  random_clifford_375_3.stim  random_clifford_400_1.stim  random_clifford_400_2.stim  random_clifford_400_3.stim  random_clifford_425_1.stim  random_clifford_425_2.stim  random_clifford_425_3.stim  random_clifford_450_1.stim  random_clifford_450_2.stim  random_clifford_450_3.stim  random_clifford_475_1.stim  random_clifford_475_2.stim  random_clifford_475_3.stim  random_clifford_500_1.stim  random_clifford_500_2.stim  random_clifford_500_3.stim  random_clifford_525_1.stim  (+38 more)
benchmarking/random_stims/: random_clifford_200_1.stim  random_clifford_200_2.stim  random_clifford_200_3.stim  random_clifford_225_1.stim  random_clifford_225_2.stim  random_clifford_225_3.stim  random_clifford_250_1.stim  random_clifford_250_2.stim  random_clifford_250_3.stim  random_clifford_275_1.stim  random_clifford_275_2.stim  random_clifford_275_3.stim  random_clifford_300_1.stim  random_clifford_300_2.stim  random_clifford_300_3.stim  random_clifford_325_1.stim  random_clifford_325_2.stim  random_clifford_325_3.stim  random_clifford_350_1.stim  random_clifford_350_2.stim  random_clifford_350_3.stim  random_clifford_375_1.stim  random_clifford_375_2.stim  random_clifford_375_3.stim  random_clifford_400_1.stim  random_clifford_400_2.stim  random_clifford_400_3.stim  random_clifford_425_1.stim  random_clifford_425_2.stim  random_clifford_425_3.stim  random_clifford_450_1.stim  random_clifford_450_2.stim  random_clifford_450_3.stim  random_clifford_475_1.stim  random_clifford_475_2.stim  random_clifford_475_3.stim  random_clifford_500_1.stim  random_clifford_500_2.stim  random_clifford_500_3.stim  random_clifford_525_1.stim  (+14 more)
qasmtools/include/qasmtools/ast/: replacer.hpp
qasmtools/include/qasmtools_stab/ast/: ast.hpp  base.hpp  cloneable.hpp  decl.hpp  expr.hpp  program.hpp  replacer.hpp  semantic.hpp  stmt.hpp  traversal.hpp  var.hpp  visitor.hpp
qasmtools/include/qasmtools_stab/parser/: lexer.hpp  parser.hpp  position.hpp  preprocessor.hpp  token.hpp
qasmtools/include/qasmtools_stab/tools/: ast_printer.hpp
qasmtools/include/qasmtools_stab/utils/: angle.hpp  templates.hpp
src/: AffineState.cpp  AffineState.h  random.cpp  random.h  stim_parser.cpp
src/qasm/: qasm.hpp
stab/: main.cpp
unit_tests/: CMakeLists.txt
unit_tests/tests/: tests.cpp
